--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,39 @@
-# See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
-# Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
-
-# Node
+# Angular specific files
 /node_modules
-npm-debug.log
-yarn-error.log
+/dist
+/out-tsc
+/tmp
 
-/src/environments
+# Angular build artifacts
+/coverage
+/.angular
 
-# IDEs and editors
-.idea/
+# Environment files
+/src/environments/*
+
+# IDE or editor specific files
+/.idea
 .project
 .classpath
 .c9/
 *.launch
 .settings/
-*.sublime-workspace
+.vscode/
+.history/
+*.code-workspace
 
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
+# Mac specific files
 .DS_Store
+
+# Windows specific files
 Thumbs.db
+Desktop.ini
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+package-lock.json
+pnp.js
+.pnpm-debug.log*
